--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,203 @@
-.App {
+/* variables declared here - these are the colors for our pages, as well as the font stacks and sizes. */
+:root {
+  --black: #12100e;
+  --red: #f4442e;
+  --pink: #e96280;
+  --green: #07f572;
+  --white: #ffeedb;
+  --font-size: 1.3rem;
+  --mono: "PT Mono", monospace;
+  --sans: "League Spartan", sans-serif;
+}
+/* border box model: https://css-tricks.com/box-sizing/ */
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: var(--sans);
+  background-color: var(--black);
+  color: var(--white);
+  font-size: var(--font-size);
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
+h1,
+h2 {
+  font-weight: 400;
+}
+
+a {
+  color: var(--red);
+}
+
+/* Pseudo-Elements
+    -- the :: syntax represents a pseudo-element
+    -- they are used to style specified parts of the element
+    -- they are:
+        ::after         insert something after the content of the element
+        ::before        insert something after the content of the element
+        ::first-letter  style the first letter of the element
+        ::first-line    style the first line of the element
+        ::marker        style the markers of list items
+        ::selection     style the portion of the element selected by the user
+    */
+
+a::before {
+  content: "";
+  color: var(--red);
+}
+a::after {
+  content: "";
+  color: var(--red);
+}
+
+/* Pseudo-Classes
+    -- define a special state of an element
+    -- they are:
+        :active        
+        :checked
+        :disabled
+        :empty
+        :enabled
+        :first-child
+        :first-of-type
+        :focus
+        :hover
+        :in-range
+        :invalid
+        :lang(language)
+        :last-child
+        :last-of-type
+        :link
+        :not(selector)
+        :nth-child(n)
+        :nth-last-child(n)
+        :nth-last-of-type(n)
+        :nth-of-type(n)
+        :only-of-type
+        :only-child
+        :optional
+        :out-of-range
+        :read-only
+        :read-write
+        :required
+        :root
+        :target
+        :valid
+        :visited
+*/
+.element:hover {
+  background-color: var(--green);
+  color: var(--black);
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--pink);
+  text-decoration: none;
+}
+
+#intro {
+  padding-bottom: 10rem;
+  font-family: var(--sans);
+}
+
+.intro p {
+  font-size: 1rem;
+  line-height: 1.5;
+  margin: 0;
+  color: var(--green);
+}
+
+.intro .name {
+  font-family: var(--mono);
+}
+
+.element {
+  border: 2px solid var(--white);
+  font-size: 2.5rem;
+  margin: 0;
+  padding: 1rem;
+  color: var(--green);
+  font-family: var(--mono);
+}
+
+.element-box {
+}
+
+.div-name {
+  display: flex;
+  justify-content: space-between;
+}
+
+p.name {
+  font-size: 4rem;
+  color: var(--green);
+  display: block;
+}
+
+p.name::selection {
+  color: blue;
+  background-color: yellow;
+}
+
+#intro h2 {
+  font-size: 2rem;
+  font-weight: normal;
+}
+
+#contact {
+  padding: 0rem 3rem;
+  display: flex;
+  justify-content: center;
+}
+
+/* nav bar */
+
+nav {
+  font-family: var(--mono);
+  font-size: 80%;
+  padding: 1rem;
+}
+
+nav h1 a {
+  font-family: var(--sans);
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+nav li:first-child {
+  flex-basis: 100%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav a {
+  color: var(--white);
+  text-decoration: none;
+  display: block;
 }
